[project]
name = "local_tuya"
version = "4.0.9"
description = "Control Tuya devices with MQTT over LAN."
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/local-tuya" }
dependencies = [
    "aiomqtt >=2.3.0,<3 ; python_version < '4'",
    "concurrent-tasks >=1.15.1,<2",
    "imbue >=2.1.1,<3",
    "pycryptodomex >=3,<4",
    "typing-extensions >=4.10",
    "zenconfig[pydantic,yaml] >=2.1.1,<3",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pytest ==8.4.2",
    "pytest-asyncio ==1.1.0",
    "pytest-mock ==3.15.0",
    "ruff ==0.12.12",
    "mypy ==1.17.1",
    "pre-commit ==4.3.0",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true

[tool.uv]
build-backend = { module-name = "local_tuya", module-root = "" }

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"
