[project]
name = "local_tuya"
version = "5.2.1"
description = "Control Tuya devices with MQTT over LAN."
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/local-tuya" }
dependencies = [
    "aiomqtt ==2.4.0 ; python_version < '4'",
    "concurrent-tasks ==1.16.3",
    "imbue==2.2.1",
    "pycryptodomex ==3.23.0",
    "pydantic-settings[yaml] ==2.12.0",
    "uvloop ==0.22.1",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pre-commit ==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio ==1.3.0",
    "pytest-mock ==3.15.1",
    "ruff==0.14.14",
    "ty==0.0.14",
]

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT", "RUF", "UP"]
ignore = ["E501", "RUF001"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.uv]
build-backend = { module-name = "local_tuya", module-root = "" }

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = true

[build-system]
requires = ["uv_build>=0.9.17,<0.11"]
build-backend = "uv_build"
